app/Resources/static/themes/material/css/nav.scss
/* ==========================================================================
   Nav
   ========================================================================== */
nav,
.nav-wrapper {
  height: auto;
  line-height: initial;
}

nav {
  input {
    color: #aaa;
  }

  ul a:hover {
    background-color: initial;
  }
}

.nav-wrapper {
  display: flex;
  padding: 0.6rem 0.4rem 0.6rem 0.75rem;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;

  .button-collapse {
    margin-left: 0;
    margin-right: 0.5rem;
    padding: 0 0.5rem;
    height: auto;
    line-height: 1;
    background-color: transparent;
    border: none;
  }
}

nav .nav-wrapper i {
  height: 46px;
  line-height: 46px;
}

.nav-input {
  display: none;
}

.nav-panel-buttom {
  display: flex;
  flex-grow: 1;
  justify-content: flex-end;
}

.nav-panel-add .add,
.nav-panel-search .search,
.nav-panels .close {
  color: #444 !important;
}

.nav-panels {
  transition: background 0.2s ease;

  .action {
    margin: 0;
    font-size: 2.1rem;
  }

  .input-field input {
    display: block;
    line-height: inherit;
    width: calc(100% - 8rem);
    height: 4.1rem;
  }

  .input-field input:focus {
    background-color: #fff;
    border: 0;
    box-shadow: none;
    color: #444;
  }
}

.nav-panel-top {
  display: flex;
  align-items: center;
}

.input-field {
  &.nav-panel-add label,
  &.nav-panel-search label {
    left: 1rem;
  }

  &.nav-panel-add .close,
  &.nav-panel-search .close {
    position: absolute;
    top: 0;
    right: 1rem;
    color: transparent;
    cursor: pointer;
    font-size: 2rem;
    transition: 0.3s color;
  }

  &.nav-panel-add,
  &.nav-panel-add form,
  &.nav-panel-search,
  &.nav-panel-search form {
    display: flex;
    flex: 1;
  }

  &.nav-panel-add form.disabled,
  &.nav-panel-add form.disabled input {
    background-color: whitesmoke;
  }
}

.nav-form-button {
  padding: 0 1rem;
  background-color: transparent;
  border: none;

  &:focus {
    background-color: inherit;
  }
}

#button_filters {
  display: none;
}

#button_export {
  display: none;
}

@media (min-width: 993px) {
  .button-collapse {
    display: none;
  }
}

